<resources>
    <string name="app_name">Semester Registration</string>
    <string name="onBackPressMessage">You are not allowed to go back at this stage !</string>
    <string name="onEmptyFieldMessage">Empty fields are not allowed !</string>
    <string name="onSuccessfulRegistration">Congratulations! You have been successfully registered.</string>
    <string name="onUnsuccessfulRegistration">Sorry! You need to pay the fees first to move ahead and register successfully.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="sem_1">1st Semester</string>
    <string name="sem_2">2nd Semester</string>
    <string name="sem_3">3rd Semester</string>
    <string name="sem_4">4th Semester</string>
    <string name="cse_button">CSE</string>
    <string name="ece_button">ECE</string>
    <string name="password_policy">\n\t<b><u>PASSWORD POLICY:</u></b> \n\t\t\t\t⭐At least 8 chars \n\t\t\t\t⭐Contains at least one digit \n\t\t\t\t⭐Contains at least one lower alpha char and one \n\t\t\t\t\t\t upper alpha char \n\t\t\t\t⭐Contains at least one char within a set of\n\t\t\t\t\t\t special chars (@#%$^ etc.) \n\t\t\t\t⭐Does not contain space, tab, etc.</string>
    <string name="policy_expand"><u>To know more about the password policy click here</u></string>
</resources>
