<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/semButtonLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/semButton1a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:text="@string/sem_1"/>

        <Button
            android:id="@+id/semButton2a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sem_2"
            android:textAllCaps="false"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/semButton3a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sem_3"
            android:textAllCaps="false"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/semButton4a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/sem_4"
            android:textAllCaps="false"
            android:layout_marginTop="50dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/branchButtonLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:visibility="gone">

        <Button
            android:id="@+id/cseButtonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cse_button"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/eceButtonA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ece_button"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"/>

    </LinearLayout>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/paymentInfoListLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="gone">

    <TextView
        android:id="@+id/errorTV1"
        android:layout_width="409dp"
        android:layout_height="22dp"
        android:gravity="center"
        android:text="Error"
        android:textAllCaps="true"
        android:textColor="#F60B0B"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/titleRow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#CC000000"
        android:divider="#000000"
        android:showDividers="end"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#FFFFFF"
            android:dividerPadding="2dp"
            android:orientation="horizontal"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingBottom="4dp"
            android:showDividers="middle">

            <TableRow
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:padding="2dp"
                    android:text="Roll Number"
                    android:textColor="#08EACB"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-smallcaps"
                    android:padding="2dp"
                    android:text="Student Name"
                    android:textColor="#08EACB"
                    android:textSize="16sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-smallcaps"
                    android:maxWidth="100dp"
                    android:maxLines="1"
                    android:padding="2dp"
                    android:text="Extra Information"
                    android:textColor="#08EACB"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </TableRow>

        </TableRow>

    </TableLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleRow" />

</androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>